# IP2Location-Varnish

./: .gitignore  .travis.yml  CHANGES.rst  Makefile.am  README.rst  autogen.sh  configure.ac  readme.md
src/: Makefile.am  vmod_ip2location.c  vmod_ip2location.vcc
